force-app/main/default/objects/Integration_Log__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>Cross-system trace key inherited from the related Sales Order.</description>
    <formula>Sales_Order__r.Correlation_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Correlation ID</label>
    <type>Text</type>
</CustomField>