force-app/main/default/objects/Integration_Log__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create Order</fullName>
            </value>
            <value>
                <fullName>Update Order</fullName>
            </value>
            <value>
                <fullName>Cancel Order</fullName>
            </value>
            <value>
                <fullName>Status Callback</fullName>
            </value>
            <value>
                <fullName>Health Check</fullName>
            </value>
            <value>
                <fullName>Batch Sync</fullName>
            </value>
            <value>
                <fullName>Create Return Order</fullName>
            </value>
            <value>
                <fullName>Reconciliation Mismatch</fullName>
            </value>
            <value>
                <fullName>Reconciliation Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>