force-app/main/default/objects/Integration_Log__c/listViews/All_Integration_Logs.listView-meta.xml
<ListView>
    <fullName>All_Integration_Logs</fullName>
    <columns>NAME</columns>
    <columns>Sales_Order__c</columns>
    <columns>Direction__c</columns>
    <columns>Operation__c</columns>
    <columns>Status__c</columns>
    <columns>HTTP_Status_Code__c</columns>
    <columns>Duration_Ms__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Integration Logs</label>
</ListView>